--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-checkbox": "^2.0.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "^0.19.13"
+    "react-native-web": "^0.19.13",
+    "expo-checkbox": "~4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
