--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.17",
     "expo": "~52.0.18",
+    "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "^4.0.11",
@@ -22,7 +23,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "^0.19.13",
-    "expo-checkbox": "~4.0.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
