--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.17",
+    "axios": "^1.7.9",
     "expo": "~52.0.18",
     "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
