--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "axios": "^1.7.9",
     "expo": "~52.0.18",
@@ -17,6 +18,7 @@
     "expo-linking": "~7.0.3",
     "expo-router": "^4.0.11",
     "expo-status-bar": "~2.0.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-check-box": "^2.1.7",
@@ -24,8 +26,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "^0.19.13",
-    "zod": "^3.24.1",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
